argocd/apps/resume/manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rx-resume
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: rx-resume
  template:
    metadata:
      labels:
        app: rx-resume
    spec:
      containers:
      - name: rx-resume
        image: amruthpillai/reactive-resume:v4.1.8@sha256:207aa74f9ee949307278a0a043904184dc3d4709dab95aa1ab21f346271d64ae
        ports:
        - containerPort: 3010
      - name: rx-chrome
        image: ghcr.io/browserless/chromium:latest@sha256:2b7c37af861926db0957410bcc966c7a8c2893bb0c7c21410524ccfefe2096a4
        ports:
        - containerPort: 3000
      - name: rx-resume-s3
        image: minio/minio:latest@sha256:a62e44a7db506b8ed114a44e67b4996c4f1ecca981d9c6e40aa2581334999313
        args:
        - server
        - /data
        ports:
        - name: s3
          containerPort: 9000
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /data
          name: assets-storage
        # resources:
        #   limits:
        #     cpu: 1000m
        #     memory: 2048Mi
        #   requests:
        #     cpu: 1000m
        #     memory: 2048Mi

      volumes:
      - name: assets-storage
        persistentVolumeClaim:
          claimName: minio
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              valueFrom:
                configMapKeyRef:
                  name: resume-config
                  key: DB_DATABASE_NAME
            - name: POSTGRES_USER
              valueFrom:
                configMapKeyRef:
                  name: resume-config
                  key: DB_USERNAME
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: resume-secrets
                  key: DB_PASSWORD
          image: postgres:15-alpine@sha256:a58cec2ba7a60b4c08d51f2ca93c1ad65fbf96e75cf0c89b7c0d2684860d3bb3
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - |
                  pg_isready --dbname="${POSTGRES_DB}" --username="${POSTGRES_USER}" || exit 1;
                  Chksum="$(psql --dbname="${POSTGRES_DB}" --username="${POSTGRES_USER}" --tuples-only --no-align --command='SELECT COALESCE(SUM(checksum_failures), 0) FROM pg_stat_database')";
                  echo "checksum failure count is $$Chksum";
                  [ "$Chksum" = '0' ] || exit 1
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready --dbname="${POSTGRES_DB}" --username="${POSTGRES_USER}"
            initialDelaySeconds: 5
            periodSeconds: 10
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          name: postgres
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - name: db
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: db
---
