argocd/apps/resume/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: resume
  name: resume
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: resume
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
  name: redis
spec:
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
  selector:
    app: redis
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres
  name: postgres
spec:
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  selector:
    app: postgres
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: minio
  name: minio
spec:
  ports:
    - name: http
      port: 9000
      targetPort: 9000
  selector:
    app: minio
