argocd/apps/resume/manifests/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: resume-vs
spec:
  hosts:
    - rxresume.yanello.net
  gateways:
    - istio-system/kube-gateway
  http:
    - route:
        - destination:
            host: rx-resume
            port:
              number: 3010
